# zeblang

./: .gitignore  .gitinore  Cargo.toml  README.md  TODO.md  compile.sh  helpers.js  makefile  return.ll  return.zb
.github/workflows/: rust.yml
benchmarks/: is_127_prime  is_127_prime.py  prime_benchmark.sh
src/: arg_parser.rs  error.rs  generator.rs  interpret.rs  lib.rs  llvm_generator.rs  local_client.rs  main.rs  parser.rs  printing.rs  tokenizer.rs
src/tests/: integration_tests.rs  llvm_tests.rs  mod.rs  tokenizer_tests.rs
test_scripts/: arrays.zb  for.zb  funcs.zb  if.zb  json.zb  mut_arrays.zb  precedance.zb  print.zb  syntax_error.zb  test_compile.sh  test_compile_llvm.sh  test_json.sh  variables.zb  while.zb
