[package]
name = "zeblang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zeblang"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "zeblang"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen = "0.2"
